--- a/.htaccess
+++ b/.htaccess
@@ -21,6 +21,7 @@ php_flag display_errors off
 php_flag html_errors on
 php_flag log_errors on
 php_value error_log  log/http.error
+php_value memory_limit 256M
 </IfModule>
 
 <IfModule mod_php7.c>
@@ -32,6 +33,7 @@ php_flag display_errors off
 php_flag html_errors on
 php_flag log_errors on
 php_value error_log  log/http.error
+php_value memory_limit 256M
 
 
 #php_value xdebug.profiler_enable 1
