--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -21,4 +21,4 @@ jobs:
         run: |
           docker buildx build --push \
             --tag jeedom/jeedom:alpha \
-            --platform linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v5,linux/386 .
+            --platform linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v5 .
