--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: install buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v1
         with:
           version: latest
       - name: login to docker hub
@@ -21,4 +21,4 @@ jobs:
         run: |
           docker buildx build --push \
             --tag jeedom/jeedom:alpha \
-            --platform linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v5 .
+            --platform linux/amd64,linux/arm64/v8 .
