Give me some toast!

--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -13,6 +13,12 @@ product_icon192=core/img/logo-jeedom-sans-nom-couleur-192x192.png
 product_icon512=core/img/logo-jeedom-sans-nom-couleur-512x512.png
 product_image=core/img/logo-jeedom-grand-nom-couleur.svg
 product_connection_image=core/img/logo-jeedom-grand-nom-couleur-460x320.png
+logo_light = core/img/logo-jeedom_Light.png
+logo_dark = core/img/logo-jeedom_Dark.png
+logo_mobile_light = core/img/jeedom_home_Light.png
+logo_mobile_dark = core/img/jeedom_home_Dark.png
+
+;interface
 default_bootstrap_theme=core2019_Light
 default_bootstrap_theme_night=core2019_Dark
 mobile_theme_color=core2019_Light
@@ -22,12 +28,14 @@ theme_end_day_hour=20:00
 theme_changeAccordingTime=1
 css::background-opacity = 1
 css::border-radius = 0
-logo_light = core/img/logo-jeedom_Light.png
-logo_dark = core/img/logo-jeedom_Dark.png
-logo_mobile_light = core/img/jeedom_home_Light.png
-logo_mobile_dark = core/img/jeedom_home_Dark.png
+widget::step::width = 40
+widget::step::height = 20
+widget::background-opacity = 1.0
+widget::margin = 4
+interface::toast::position = toast-bottom-right
+interface::toast::duration = 5
 
-;Configuration historique
+;history
 historyCalculTendance = 2
 historyCalculPeriod = 24
 historyCalculTendanceThresholddMin = -0.1
@@ -58,7 +66,10 @@ log::level::event[1000] = 0
 log::level::event[default] = 0
 
 ;Equipement
+battery::warning = 30
+battery::danger = 5
 numberOfTryBeforeEqLogicDisable = 3
+expression::autoQuote=1
 
 ;deamon
 deamonsSleepTime = 1
@@ -95,12 +106,6 @@ market::allowDNS = 0
 market::cloud::backup::fullfrequency = 1M
 market::dns::mtu = 1300
 
-;Widget
-widget::step::width = 40
-widget::step::height = 20
-widget::background-opacity = 1.0
-widget::margin = 4
-
 ;interaction
 interact::confidence1 = 1
 interact::confidence2 = 3
@@ -130,10 +135,6 @@ cache::engine=FilesystemCache
 cache::redisport=6379
 cache::memcacheport=11211
 
-;Battery
-battery::warning = 30
-battery::danger = 5
-
 ;Report
 report::delay = 2000
 report::maxdays = 30
@@ -149,9 +150,6 @@ graphlink::render = 3000
 
 ;LDAP
 ldap::usersearch = uid
-
-;CMD
-expression::autoQuote=1
 
 ;Service jeedom
 service_cloud_url=https://cloud.jeedom.com
