--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -34,6 +34,7 @@ widget::background-opacity = 1.0
 widget::margin = 4
 interface::toast::position = toast-bottom-right
 interface::toast::duration = 5
+interface::advance::coloredcats = 1
 
 ;history
 historyCalculTendance = 2
