--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -35,6 +35,11 @@ widget::margin = 4
 interface::toast::position = toast-bottom-right
 interface::toast::duration = 5
 interface::advance::coloredcats = 1
+interface::background::dashboard = core/img/background/jeedom_abstract_01_
+interface::background::analysis = core/img/background/jeedom_abstract_02_
+interface::background::tools = core/img/background/jeedom_abstract_03_
+interface::background::opacitylight = 0.4
+interface::background::opacitydark = 0.6
 
 ;history
 historyCalculTendance = 2
