3eme update PHP Doc and class Type

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "league/flysystem-webdav": "*",
     "league/oauth2-client": "*",
     "matthiasmullie/minify": "*",
-    "pragmarx/google2fa-qrcode": "^1.0"
+    "pragmarx/google2fa-qrcode": "^1.0",
+    "ext-pdo": "*",
+    "ext-json": "*"
   },
   "license": "GPL",
   "config": {
