allow to configure specifc doc url (or if empty remove help button)

--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -162,3 +162,6 @@ service_cloud_url=https://cloud.jeedom.com
 service::cloud::url=https://cloud.jeedom.com
 service::monitoring::url=https://monitoring.jeedom.com
 service::backup::url=https://backup.jeedom.com
+
+;Doc 
+doc::base_url=https://doc.jeedom.com
