fix for script plugin

--- a/.htaccess
+++ b/.htaccess
@@ -74,7 +74,7 @@ RedirectMatch 403 ^.*\/docs\/.*$
 RedirectMatch 403 ^.*\/install\/.*$
 RedirectMatch 403 ^.*\/log\/.*$
 RedirectMatch 403 ^.*\/mobile\/.*\/((?!\.png|\.jpg|\.jpeg|\.css|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 ^.*\/script\/.*$
+RedirectMatch 403 ^((?!plugins).)*\/script\/.*$
 RedirectMatch 403 ^.*\/support\/.*$
 RedirectMatch 403 ^.*\/tests\/.*$
 RedirectMatch 403 ^.*\/vendor\/.*$
