--- a/.htaccess
+++ b/.htaccess
@@ -52,7 +52,7 @@ DirectoryIndex index.php
 # Right on folder
 
 RedirectMatch 403 ^.*\/3rdparty\/.*\/((?!\.png|\.jpg|\.jpeg|\.css|\.js|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 ^.*\/backup\/.*$
+RedirectMatch 403 ^((?!plugins).)*\/backup\/.*$
 
 RedirectMatch 403 ^.*\/core/ajax\/.*\/((?!ajax\.php).)*$
 RedirectMatch 403 ^.*\/core/api\/.*\/((?!\.php).)*$
@@ -74,7 +74,6 @@ RedirectMatch 403 ^.*\/docs\/.*$
 RedirectMatch 403 ^.*\/install\/.*$
 RedirectMatch 403 ^.*\/log\/.*$
 RedirectMatch 403 ^.*\/mobile\/.*\/((?!\.png|\.jpg|\.jpeg|\.css|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 ^((?!plugins).)*\/script\/.*$
 RedirectMatch 403 ^.*\/support\/.*$
 RedirectMatch 403 ^.*\/tests\/.*$
 RedirectMatch 403 ^.*\/vendor\/.*$
