--- a/core/php/.htaccess
+++ b/core/php/.htaccess
@@ -1,5 +1,10 @@
 Order allow,deny
 
+<FilesMatch authentification.php>
+    Order Allow,Deny
+    Allow from all
+</FilesMatch>
+
 <FilesMatch downloadFile.php>
     Order Allow,Deny
     Allow from all
