--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Check Out Repo 
         uses: actions/checkout@v2
+      - name: What
+        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -25,6 +27,6 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: jeedom/jeedom:${GITHUB_REF##*/}
+          tags: jeedom/jeedom:${{ env.BRANCH }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
