--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 ServerSignature Off
-Options -Indexes
+ServerTokens Prod
+Options -Indexes -ExecCGI -FollowSymLinks
+TraceEnable Off
 
 <ifModule mod_gzip.c>
 mod_gzip_on Yes
