--- a/install/fail2ban.jeedom.conf
+++ b/install/fail2ban.jeedom.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 #Ne pas bloque localhost ni s'auto-bloquer.
-ignoreip = 127.0.0.1/8 192.168.1.0/24
+ignoreip = 127.0.0.1/8 192.168.1.0/24 192.168.0.0/24
 
 # ban de  60 minutes
 bantime  = 28800
