--- a/.htaccess
+++ b/.htaccess
@@ -46,40 +46,41 @@ DirectoryIndex index.php
 </IfModule>
 
 
-# Right on folder
+<IfModule mod_alias.c>
+    # Right on folder
+    RedirectMatch 403 (?i)^.*\/3rdparty\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
+    RedirectMatch 403 (?i)^((?!plugins).)*\/backup\/.*$
 
-RedirectMatch 403 (?i)^.*\/3rdparty\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 (?i)^((?!plugins).)*\/backup\/.*$
+    RedirectMatch 403 (?i)^.*\/core/ajax\/.*\/((?!ajax\.php).)*$
+    RedirectMatch 403 (?i)^.*\/core/api\/.*\/((?!\.php).)*$
+    RedirectMatch 403 (?i)^.*\/core/class\/.*$
+    RedirectMatch 403 (?i)^.*\/core/com\/.*$
+    RedirectMatch 403 (?i)^.*\/core/config\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/core/css\/.*\/((?!\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/core/i18n\/.*$
+    RedirectMatch 403 (?i)^.*\/core/img\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/core/php\/.*\/((?!\.php).)*$
+    RedirectMatch 403 (?i)^.*\/core/js\/.*$
+    RedirectMatch 403 (?i)^.*\/core/repo\/.*$
+    RedirectMatch 403 (?i)^.*\/core/template\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/core/themes\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
 
-RedirectMatch 403 (?i)^.*\/core/ajax\/.*\/((?!ajax\.php).)*$
-RedirectMatch 403 (?i)^.*\/core/api\/.*\/((?!\.php).)*$
-RedirectMatch 403 (?i)^.*\/core/class\/.*$
-RedirectMatch 403 (?i)^.*\/core/com\/.*$
-RedirectMatch 403 (?i)^.*\/core/config\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.svg).)*$
-RedirectMatch 403 (?i)^.*\/core/css\/.*\/((?!\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 (?i)^.*\/core/i18n\/.*$
-RedirectMatch 403 (?i)^.*\/core/img\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.svg).)*$
-RedirectMatch 403 (?i)^.*\/core/php\/.*\/((?!\.php).)*$
-RedirectMatch 403 (?i)^.*\/core/js\/.*$
-RedirectMatch 403 (?i)^.*\/core/repo\/.*$
-RedirectMatch 403 (?i)^.*\/core/template\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 (?i)^.*\/core/themes\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.js|\.js.map|\.woff|\.woff2|\.ttf|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/data\/.*\/((?!\.m3u8|\.ts|\.jpg|\.jpeg|\.gif|\.webp|\.png|\.mp3|\.mp4|\.aac|\.svg|\.obj|\.mtl|\.woff|\.woff2|\.ttf|\.css|\.pdf|\.css.map|\.js|\.js.map).)*$
+    RedirectMatch 403 (?i)^.*\/desktop\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg).)*$
+    RedirectMatch 403 (?i)^.*\/docs\/.*$
+    RedirectMatch 403 (?i)^.*\/install\/.*$
+    RedirectMatch 403 (?i)^.*\/log\/.*$
+    RedirectMatch 403 (?i)^.*\/mobile\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg|\.html|\.ajax\.php).)*$
+    RedirectMatch 403 (?i)^.*\/support\/.*$
+    RedirectMatch 403 (?i)^.*\/tests\/.*$
+    RedirectMatch 403 (?i)^.*\/vendor\/.*$
 
-RedirectMatch 403 (?i)^.*\/data\/.*\/((?!\.m3u8|\.ts|\.jpg|\.jpeg|\.gif|\.webp|\.png|\.mp3|\.mp4|\.aac|\.svg|\.obj|\.mtl|\.woff|\.woff2|\.ttf|\.css|\.pdf|\.css.map|\.js|\.js.map).)*$
-RedirectMatch 403 (?i)^.*\/desktop\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg).)*$
-RedirectMatch 403 (?i)^.*\/docs\/.*$
-RedirectMatch 403 (?i)^.*\/install\/.*$
-RedirectMatch 403 (?i)^.*\/log\/.*$
-RedirectMatch 403 (?i)^.*\/mobile\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp|\.css|\.css.map|\.woff|\.woff2|\.ttf|\.svg|\.html|\.ajax\.php).)*$
-RedirectMatch 403 (?i)^.*\/support\/.*$
-RedirectMatch 403 (?i)^.*\/tests\/.*$
-RedirectMatch 403 (?i)^.*\/vendor\/.*$
-
-# Plugin specific
-RedirectMatch 403 (?i)^.*\/plugin_info\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp).)*$
-RedirectMatch 403 (?i)^.*\/ressources\/.*$
-RedirectMatch 403 (?i)^.*\/resources\/.*$
-RedirectMatch 403 (?i)^.*\/data/records\/.*\/((?!\.m3u8|\.mp4|\.ts).)*$
+    # Plugin specific
+    RedirectMatch 403 (?i)^.*\/plugin_info\/.*\/((?!\.png|\.jpg|\.jpeg|\.gif|\.webp).)*$
+    RedirectMatch 403 (?i)^.*\/ressources\/.*$
+    RedirectMatch 403 (?i)^.*\/resources\/.*$
+    RedirectMatch 403 (?i)^.*\/data/records\/.*\/((?!\.m3u8|\.mp4|\.ts).)*$
+</IfModule>
 
 
 # Right on file
