--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -7,6 +7,7 @@ timezone = Europe/Brussels
 session_lifetime = 24
 jeedom::firstUse = 1
 folder::tmp = /tmp/jeedom
+mbState = 0
 product_name=Jeedom
 product_icon=core/img/logo-jeedom-sans-nom-couleur-25x25.png
 product_icon192=core/img/logo-jeedom-sans-nom-couleur-192x192.png
@@ -162,7 +163,7 @@ service::cloud::url=https://cloud.jeedom.com
 service::monitoring::url=https://monitoring.jeedom.com
 service::backup::url=https://backup.jeedom.com
 
-;Doc 
+;Doc
 doc::base_url=https://doc.jeedom.com
 
 ;DNS
