--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -2,6 +2,14 @@ name: Docker Image CI latest
 on:
   schedule:
     - cron: "00 02 * * *"
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 jobs:
   build:
     runs-on: ubuntu-latest
