--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -5,11 +5,8 @@ on:
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'
+        description: 'Reason'     
+        default: 'Manual launch'
 jobs:
   build:
     runs-on: ubuntu-latest
