--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -29,6 +29,7 @@ theme_end_day_hour=20:00
 theme_changeAccordingTime=1
 css::background-opacity = 1
 css::border-radius = 0
+css::objectBackgroundBlur = 0
 widget::step::width = 40
 widget::step::height = 20
 widget::background-opacity = 1.0
