--- a/core/config/default.config.ini
+++ b/core/config/default.config.ini
@@ -42,6 +42,7 @@ interface::background::analysis = core/img/background/jeedom_abstract_02_
 interface::background::tools = core/img/background/jeedom_abstract_03_
 interface::background::opacitylight = 0.6
 interface::background::opacitydark = 0.6
+dahsboard::column::size = col-xs-12
 
 ;history
 historyCalculTendance = 2
