fix header error on chrome

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,15 @@
 ServerSignature Off
 Options -Indexes -ExecCGI -FollowSymLinks
 
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Credentials true
+    Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
+    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+    ServerSignature Off
+</IfModule>
+
 <ifModule mod_gzip.c>
 mod_gzip_on Yes
 mod_gzip_dechunk Yes
